
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/featured"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="812dp" >

            <View android:id="@+id/_bg__featured"
                android:background="@drawable/_bg__featured_shape"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_width="match_parent"
                android:layout_height="812dp" />

            <ImageView android:id="@+id/pexels_photo_1435457"
                android:src="@drawable/pexels_photo_1435457"
                android:contentDescription="pexels_photo_1435457"
                android:layout_marginLeft="-12.5dp"
                android:layout_marginStart="-12.5dp"
                android:layout_marginTop="600.5dp"
                android:layout_width="400dp"
                android:layout_height="490dp" />


            <RelativeLayout android:id="@+id/group_402"
                android:layout_marginTop="27dp"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView android:id="@+id/__ionicons_svg_ios_arrow_back"
                    android:src="@drawable/__ionicons_svg_ios_arrow_back"
                    android:contentDescription="__ionicons_svg_ios_arrow_back"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="8.5755615234375dp"
                    android:layout_height="15dp" />

                <TextView android:id="@+id/featured"
                    android:fontFamily="Poppins"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/featured_color"
                    android:layout_marginLeft="115dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="95dp"
                    android:layout_height="24dp"
                    android:text="@string/featured_string"
                    />

                <ImageView android:id="@+id/__ionicons_svg_ios_search"
                    android:src="@drawable/__ionicons_svg_ios_search"
                    android:contentDescription="__ionicons_svg_ios_search"
                    android:layout_marginLeft="310dp"
                    android:layout_marginStart="310dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="14.996276855469dp"
                    android:layout_height="15dp" />

            </RelativeLayout>

            <ImageView android:id="@+id/pexels_photo_1816943"
                android:src="@drawable/pexels_photo_1816943"
                android:contentDescription="pexels_photo_1816943"
                android:layout_marginLeft="-12.5dp"
                android:layout_marginStart="-12.5dp"
                android:layout_marginTop="126.5dp"
                android:layout_width="400dp"
                android:layout_height="500dp" />

            <ImageView android:id="@+id/path_345"
                android:src="@drawable/path_345"
                android:contentDescription="path_345"
                android:layout_marginLeft="28.1240234375dp"
                android:layout_marginStart="28.1240234375dp"
                android:layout_marginTop="95.359985351562dp"
                android:layout_width="163.61999511719dp"
                android:layout_height="26.892028808594dp" />

            <View android:id="@+id/pexels_photo_417473"
                android:background="@drawable/pexels_photo_417473_shape"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="159dp"
                android:layout_width="325dp"
                android:layout_height="425.76928710938dp" />

            <View android:id="@+id/pexels_photo_417473_ek1"
                android:background="@drawable/pexels_photo_417473_ek1_shape"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="623dp"
                android:layout_width="325dp"
                android:layout_height="424.76928710938dp" />

            <TextView android:id="@+id/the_greatest_showman_"
                android:fontFamily="Poppins"
                android:textSize="32sp"
                android:textColor="@color/featured_color"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="415dp"
                android:layout_width="215dp"
                android:layout_height="99dp"
                android:text="@string/the_greatest_showman__string"
                />

            <TextView android:id="@+id/soundtrack"
                android:fontFamily="Poppins"
                android:textSize="12sp"
                android:textColor="@color/featured_color"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="520dp"
                android:layout_width="73dp"
                android:layout_height="19dp"
                android:text="@string/soundtrack_string"
                />


            <RelativeLayout android:id="@+id/group_22"
                android:layout_marginTop="747dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View android:id="@+id/rectangle_16"
                    android:background="@drawable/rectangle_16_shape"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="375dp"
                    android:layout_height="65dp" />


                <RelativeLayout android:id="@+id/group_21"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <ImageView android:id="@+id/path_343"
                        android:src="@drawable/path_343"
                        android:contentDescription="path_343"
                        android:layout_marginLeft="296dp"
                        android:layout_marginStart="296dp"
                        android:layout_marginTop="13dp"
                        android:layout_width="18.546875dp"
                        android:layout_height="19.375dp" />

                    <ImageView android:id="@+id/path_3"
                        android:src="@drawable/path_3"
                        android:contentDescription="path_3"
                        android:layout_marginLeft="133dp"
                        android:layout_marginStart="133dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="45dp"
                        android:layout_height="45dp" />

                    <ImageView android:id="@+id/__ionicons_svg_ios_microphone"
                        android:src="@drawable/__ionicons_svg_ios_microphone"
                        android:contentDescription="__ionicons_svg_ios_microphone"
                        android:layout_marginLeft="75dp"
                        android:layout_marginStart="75dp"
                        android:layout_marginTop="13dp"
                        android:layout_width="12.857238769531dp"
                        android:layout_height="20dp" />

                    <ImageView android:id="@+id/__ionicons_svg_ios_contrast"
                        android:src="@drawable/__ionicons_svg_ios_contrast"
                        android:contentDescription="__ionicons_svg_ios_contrast"
                        android:layout_marginLeft="220dp"
                        android:layout_marginStart="220dp"
                        android:layout_marginTop="12dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />

                    <ImageView android:id="@+id/__ionicons_svg_ios_pulse"
                        android:src="@drawable/__ionicons_svg_ios_pulse"
                        android:contentDescription="__ionicons_svg_ios_pulse"
                        android:layout_marginLeft="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="13dp"
                        android:layout_width="21.544006347656dp"
                        android:layout_height="20dp" />

                    <ImageView android:id="@+id/__ionicons_svg_md_wifi"
                        android:src="@drawable/__ionicons_svg_md_wifi"
                        android:contentDescription="__ionicons_svg_md_wifi"
                        android:layout_marginLeft="142dp"
                        android:layout_marginStart="142dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="27.083312988281dp"
                        android:layout_height="25dp" />

                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
